# next

./: Cargo.toml  LICENSE.md  README.md
somersault-cli/: Cargo.toml  test.txt
somersault-cli/src/: main.rs
somersault-core/: Cargo.toml
somersault-core/src/: alloc.rs  argument.rs  code_gen.rs  compiler.rs  lib.rs  op.rs  parser.rs  scope.rs  tokens.rs  toolchain.rs
somersault-core/src/backends/: mod.rs  sa_cs.rs  sanny_text.rs
somersault-core/src/tests/: compiler.rs  error_cases.rs  mod.rs  parser.rs  tokens.rs
somersault-dll/: Cargo.toml
somersault-dll/src/: common_ffi.rs  ffi.rs  impl.rs  lib.rs
somersault-repl/: Cargo.toml
somersault-repl/src/: main.rs
somersault-sbl/: Cargo.toml
somersault-sbl/src/: lib.rs
somersault-vm/: Cargo.toml
somersault-vm/src/: commands.rs  lib.rs  macro.rs
somersault-wasm/: Cargo.toml
somersault-wasm/src/: lib.rs
somersault-web/: angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
somersault-web/src/: app.config.ts  app.routes.ts  index.html  styles.scss
somersault-web/src/components/404/: 404.component.ts
somersault-web/src/components/content/: content.component.html  content.component.ts
somersault-web/src/components/editor/: editor.component.html  editor.component.scss  editor.component.ts  sbl.ts
somersault-web/src/components/guide/: guide.component.html  (+2 more)
somersault-web/src/environments/: environment.prod.ts
somersault-web/src/state/: code-share.service.ts  config.ts  editor.service.ts  fs.service.ts  persistent-signal.ts  ui.service.ts  user.service.ts
(+27 files in other folders)
