[package]
name = "ssclib"
version = "0.2.254"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "ssc"

[dependencies]
somersault-core = { path = "../somersault-core", version = "*" }
anyhow = "1.0.86"
libc = "0.2.79"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
LegalCopyright = "Copyright © 2024-2025 Seemann"
ProductName = "Somersault Compiler"
FileDescription = "Somersault Compiler Library"